--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "jest-mock-extended": "^1.0.16",
     "prettier": "^2.2.1",
     "prisma": "^2.26.0",
     "supertest": "^6.1.3",
