--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.4",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/terminus": "^7.2.0",
     "@prisma/client": "^2.26.0",
+    "class-validator": "^0.13.1",
+    "google-protobuf": "^3.17.3",
+    "kubemq-js": "file:./kubemq-js",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
