updated env config

--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-DB_ADDRESS=localhost
-DB_NAME=test-db
-DB_USERNAME=iconkaset
-DB_PASSWORD=test
-DB_PORT=5432
-DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_ADDRESS}:${DB_PORT}/${DB_NAME}?schema=public
+DATABASE_URL=postgresql://iconkaset:test@localhost:5432/test-db?schema=public
